# Procursus-roothide

./: .gitignore  Makefile  config-on-linux.sh
source-repo/debianutils/: .gitlab-ci.yml  CHANGELOG  CONTRIBUTING  Makefile.in  acinclude.m4  add-shell  add-shell.8  configure.ac  ischroot.c  remove-shell.8  update-shells.8  which.1
source-repo/debianutils/po4a/: Makefile.in
source-repo/debianutils/po4a/de/: run-parts.8  savelog.8  which.1
source-repo/debianutils/po4a/es/: Makefile.am  installkernel.8  run-parts.8  savelog.8
source-repo/debianutils/po4a/fr/: Makefile.in  installkernel.8  run-parts.8  savelog.8
source-repo/debianutils/po4a/it/: Makefile.am  Makefile.in  remove-shell.8  savelog.8
source-repo/debianutils/po4a/ja/: remove-shell.8  savelog.8
source-repo/debianutils/po4a/pl/: add-shell.8  installkernel.8  remove-shell.8  run-parts.8  savelog.8
source-repo/debianutils/po4a/po/: de.po  es.po  it.po  ja.po  pl.po  pt.po
source-repo/debianutils/po4a/pt/: Makefile.in  installkernel.8  remove-shell.8  run-parts.8  savelog.8  which.1
source-repo/debianutils/po4a/sl/: add-shell.8  installkernel.8  run-parts.8  which.1
source-repo/debianutils_5.7.orig.tar.gz_debianutils_5.7/: Makefile.am  configure  installkernel.8  ischroot.1  run-parts.8  run-parts.c  savelog.8  tempfile.1  tempfile.c
source-repo/debianutils_5.7.orig.tar.gz_debianutils_5.7/po4a/: Makefile.am
source-repo/debianutils_5.7.orig.tar.gz_debianutils_5.7/po4a/de/: Makefile.am  Makefile.in  add-shell.8  installkernel.8  remove-shell.8
source-repo/debianutils_5.7.orig.tar.gz_debianutils_5.7/po4a/es/: Makefile.in  add-shell.8  remove-shell.8  which.1
source-repo/debianutils_5.7.orig.tar.gz_debianutils_5.7/po4a/fr/: Makefile.am  add-shell.8  remove-shell.8  which.1
source-repo/debianutils_5.7.orig.tar.gz_debianutils_5.7/po4a/it/: add-shell.8  installkernel.8  run-parts.8  which.1
source-repo/debianutils_5.7.orig.tar.gz_debianutils_5.7/po4a/ja/: Makefile.am  Makefile.in  add-shell.8  installkernel.8  run-parts.8  which.1
source-repo/debianutils_5.7.orig.tar.gz_debianutils_5.7/po4a/pl/: Makefile.am  Makefile.in  which.1
source-repo/debianutils_5.7.orig.tar.gz_debianutils_5.7/po4a/po/: fr.po  sl.po
source-repo/debianutils_5.7.orig.tar.gz_debianutils_5.7/po4a/pt/: Makefile.am  add-shell.8
source-repo/debianutils_5.7.orig.tar.gz_debianutils_5.7/po4a/sl/: Makefile.am  Makefile.in  remove-shell.8  savelog.8
(+1347 files in other folders)
